Fix profile image flicker on reload due to unset height

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -347,7 +347,7 @@ ul.social-icons {
 
 .author-avatar {
   width: $base-font-size * 8;
-  height: auto;
+  height: $base-font-size * 8;
   border-radius: 50%;
 }
 
